--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "postinstall": "vite build"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^5.1.0",
